--- a/assets/index.css
+++ b/assets/index.css
@@ -109,7 +109,7 @@ padding: 8vh max(4vw, 1rem);
 }
 
 .home-container h1 {
-grid-column: 2 / 5;
+grid-column: 1 / 5;
 /* transform-origin: center; */
 /* transform: rotate(180deg); */
 /* writing-mode: vertical-rl; */
@@ -119,6 +119,21 @@ font-weight: 600;
 align-self: flex-start;
 color: var(--color-subtle);
 font-variant: all-petite-caps; */
+}
+
+@media screen and (min-width: 720px) {
+  .home-container h1 {
+    grid-column: 2 / 5;
+    /* transform-origin: center; */
+    /* transform: rotate(180deg); */
+    /* writing-mode: vertical-rl; */
+    /* box-shadow: none; */
+    /* font-size: 5rem;
+    font-weight: 600;
+    align-self: flex-start;
+    color: var(--color-subtle);
+    font-variant: all-petite-caps; */
+    }
 }
 
 /* @media screen and (max-width: 600px) {
